Fixed bug with adding items